src/tests/ci/assignment_3_arrays_io_llvm/invalid_syntax/01_bad_array_declaration.c
int main() {
    int values[] = {1, 2, 3};
    return 0;
}
